Fixed reliable-delivery example